# nemotron-v3-home-security-intelligence

./: .agents-md-validator.yml  .bandit.baseline  .bandit.yml  .coverage.maui_phoenix20swa_mooo_com.pid3243213.XzrEPM2x.HqJ6uaI2GKJh  .coverage.maui_phoenix20swa_mooo_com.pid3277187.XpKjNvHx.HLIwj4VxmEYh  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .trivyignore  .venv  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT_2025.md  CHANGELOG.md  CI_FAILURE_INVESTIGATION.md  CLAUDE.md  CONTRACT_TESTS_VERIFICATION.md  CONTRIBUTING.md  DOCKER_QUICKSTART.md  Dockerfile.yolo26-benchmark  E2E_COVERAGE_GAPS_IMPLEMENTATION.md  FLAKY_TEST_DETECTION_IMPLEMENTATION.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  SKIPPED_TESTS_ANALYSIS.md  TEST_OPTIMIZATION_SUMMARY.md  codecov.yml  commitlint.config.js  docker-compose.ci.yml  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  (+19 more)
.beads/: .gitignore  AGENTS.md  bd.sock.startlock  interactions.jsonl  issues.jsonl
.claude/: ralph-loop.local.md
.github/: AGENTS.md  CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/codeql/: AGENTS.md  codeql-config.yml
.github/prompts/: AGENTS.md  code-review.prompt.md
.github/workflows/: AGENTS.md  accessibility-tests.yml  agents-md.yml  ai-code-review.yml  api-compatibility.yml  api-contract.yml  benchmarks.yml  build-base-image.yml  bundle-size.yml  ci-analytics.yml  ci.yml  codeql.yml  dependency-audit.yml  deploy.yml  docs-drift.yml  docs.yml  flaky-test-detection.yml  gitleaks.yml  gpu-tests.yml  lighthouse.yml  linear-ci-status.yml  linear-github-sync.yml  load-tests.yml  mutation-testing.yml  nightly.yml  pr-review-bot.yml  preview-deploy.yml  prompt-evaluation.yml  python-freethreaded.yml  release-drafter.yml  release.yml  rollback.yml  sast.yml  semantic-release.yml  test-coverage-gate.yml  trivy.yml  visual-tests.yml  vulnerability-management.yml  weekly-audit.yml  weekly-test-report.yml  (+2 more)
.pids/: AGENTS.md  backend.pid  frontend.pid
.zap/: rules.tsv
ai/: AGENTS.md  README_OPTIMIZATION.md  __init__.py  batch_utils.py  compile_utils.py  cpu_offloading.py  cuda_graph_manager.py  cuda_streams.py  download_models.sh  flash_attention_config.py  gpu_memory_pool.py  hub_cache_config.py  quantization_config.py  start_detector.sh  start_llm.sh  start_nemotron.sh  static_kv_cache.py  torch_optimizations.py  warmup_utils.py
ai/clip/: AGENTS.md  Dockerfile  export_onnx.py  model.py  requirements.txt  tensorrt_inference.py  (+1 more)
backend/: .dockerignore  AGENTS.md  Dockerfile  Dockerfile.prod  alembic.ini  entrypoint.sh  main.py  requirements-dev.txt  requirements-prod.txt  requirements.txt
config/: botsort.yaml  bytetrack.yaml  pgbouncer.ini  sentinel.conf  yolo26_calibration.yaml
custom/: AGENTS.md
data/: AGENTS.md  runtime.env  security.db-journal
docker/: AGENTS.md  base.Dockerfile
docs/: AGENTS.md  AGENTS_INDEX.md  AGENT_HANDOFF.md  AI_SETUP.md  API_COVERAGE.md  CHROME_DEVTOOLS_MCP.md  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  DEPLOYMENT_SAFETY_CHECKLIST.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  DI_PATTERNS.md  DOCKER_DEPLOYMENT.md  DOCKER_SECRETS.md  DOCKER_VERIFICATION_SUMMARY.md  ENVIRONMENT_VARIABLES.md  GITHUB_MODELS.md  HEALTH_CHECK_STRATEGY.md  LINEAR-GITHUB-INTEGRATION.md  LINEAR_SETUP_PROMPT.md  LINK_AUDIT.md  METRICS_ENDPOINT_HARDENING.md  MUTATION_TESTING.md  PEER_DEPS_CONFLICT.md  README.md  ROADMAP.md  RUNTIME_CONFIG.md  SECURITY_API_KEYS.md  SELF_HOSTED_RUNNER.md  SERVICE_DEPENDENCIES.md  TESTING_GUIDE.md  UV_USAGE.md  WEBSOCKET_CONTRACTS.md  ai-pipeline-load-test-report.md  deployment-hub.md  developer-hub.md  nemotron-prompts-baseline.txt  nemotron-prompts-comparison-guide.md  network-health-report.md  openapi.json  (+4 more)
frontend/: .dockerignore  .eslintrc.cjs  .prettierrc  .size-limit.json  AGENTS.md  Dockerfile  Dockerfile.prod  README-TESTING.md  TESTING.md  TEST_QUICKSTART.md  bunfig.toml  docker-entrypoint.sh  eslint.config.mjs  index.html  knip.json  lighthouserc.js  nginx.conf  package-lock.json  package.json  playwright.config.build-validation.ts  playwright.config.ts  stryker.config.mjs  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  typedoc.json  validate-storage-event-fix.js  verify-eslint.sh  vite.config.e2e.ts  vite.config.ts
monitoring/: AGENTS.md  alerting-rules.yml  alertmanager.yml  blackbox-exporter.yml  gpu-alerts.yml  json-exporter-config.yml  profiling-recording-rules.yml  profiling-regression-alerts.yml  prometheus-rules.yml  prometheus.yml  prometheus_rules.yml
mutants/: AGENTS.md  mutmut-stats.json  pyproject.toml
scripts/: AGENTS.md  AI_STARTUP_README.md  README.md  a11y-smoke-test.sh  add-type-constraints.py  agents_md_linear_sync.py  agents_md_validator.py  ai-entrypoint.sh  analyze-ci-dependencies.py  analyze-flaky-tests.py  audit-linear-github-sync.py  audit-summary.sh  audit-test-durations.py  benchmark_model_zoo.py  benchmark_py314.py  benchmark_yolo26_accuracy.py  benchmark_yolo26_container.py  benchmark_yolo26_gpu.py  benchmark_yolo26_latency.py  check-api-breaking-changes.py  check-api-compatibility.sh  check-api-contracts.sh  check-api-coverage.sh  check-branch-name.sh  check-docs-drift.py  check-integration-tests.py  check-test-coverage-gate.py  check-test-mocks.py  check-test-timeouts.py  check-trivyignore-expiry.sh  check-validation-drift.py  ci-metrics-collector.py  ci-smoke-test.sh  cleanup_orphaned_test_cameras.py  cosmos_prompt_generator.py  coverage-analysis.py  create-docs-tasks.py  create-worktree.sh  db-migrate.sh  dev.sh  (+84 more)
secrets/: .gitkeep
setup_lib/: AGENTS.md  __init__.py  core.py
tests/: AGENTS.md  test_setup.py  test_setup_core.py
tools/: __init__.py
vsftpd/: AGENTS.md  Dockerfile  INSTALL_SYSTEMD.md  README.md  SECURITY.md  USER_SYSTEMD_SETUP.md  docker-compose-wrapper.sh  entrypoint.sh  install-systemd.sh  vsftpd-user-podman.service  vsftpd-user.service  vsftpd.conf  vsftpd.service
(+5085 files in other folders)
