[project]
name = "home-security-intelligence"
version = "0.1.0"
description = "AI-powered home security monitoring system"
requires-python = ">=3.14"
dependencies = [
    # Core FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database (PostgreSQL)
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "greenlet>=3.1.0",
    "alembic>=1.13.0",
    # Redis
    "redis>=5.2.0",
    # File watching
    "watchdog>=6.0.0",
    # Image processing
    "pillow>=11.0.0",
    # GPU monitoring
    "pynvml>=11.5.0",
    # Host system monitoring
    "psutil>=5.9.0",
    # HTTP client (for AI services)
    "httpx>=0.28.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Logging
    "python-json-logger>=2.0.7",
    # TLS/Cryptography
    "cryptography>=44.0.0",
    # Metrics
    "prometheus-client>=0.21.0",
    # Template engine (security patched)
    "jinja2>=3.1.5",
    "scikit-image>=0.26.0",
    "ultralytics>=8.3.245",
    "huggingface-hub>=0.36.0",
    "transformers>=4.57.3",
    "torchreid>=0.2.5",
    "gdown>=5.2.0",
    "pyiqa>=0.1.10",
    "open_clip_torch>=2.29.0",
    "accelerate>=1.12.0",
]

[project.optional-dependencies]
dev = [
    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "fakeredis>=2.20.0",
    "testcontainers>=4.0.0",
    "hypothesis>=6.100.0",  # Property-based testing
    # CI/CD - Performance
    "pytest-benchmark>=4.0.0",
    "pytest-memray>=1.5.0",
    # CI/CD - Security
    "bandit>=1.7.0",
    # CI/CD - Complexity
    "wily>=1.25.0",
    # CI/CD - Big-O analysis
    "big-o>=0.11.0",
    # Video processing
    "ffmpeg-python>=0.2.0",
    # XML parsing (secure)
    "defusedxml>=0.7.0",
    # Dead code detection
    "vulture>=2.11",
    # Note: radon is provided by wily dependency (5.1.x)
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["backend"]
exclude = ["vulture_whitelist.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913",# too many arguments
    "PLR0915",# too many statements (complex business logic)
    "PLR2004",# magic value comparison
    "S101",   # use of assert detected (ok in tests)
    "PLC0415",# import not at top level (necessary for circular imports/isolation)
    "ASYNC109",# timeout parameter in async function (standard in Redis blpop)
    "ASYNC110",# asyncio.sleep in while loop (valid for shutdown monitoring)
    "ASYNC230",# open in async function (acceptable for small file I/O)
    "SIM105",  # contextlib.suppress not suitable for async CancelledError patterns
    "RUF006",  # asyncio.create_task without storing (valid in signal handlers)
    "PTH110", # os.path.exists() - acceptable pattern
    "PTH123", # open() instead of Path.open() - acceptable pattern
    "TC001",  # TYPE_CHECKING imports break mocking in tests - keep imports at runtime
    "TC002",  # TYPE_CHECKING imports break mocking in tests - keep imports at runtime
    "TC003",  # TYPE_CHECKING imports break mocking in tests - keep imports at runtime
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = [
    "S101",   # assert is fine in tests
    "ARG001", # unused function argument in fixtures
    "ARG002", # unused method argument for fixtures used via side effects
    "PLR2004",# magic values ok in tests
    "B007",   # unused loop control variable ok in tests
]
"backend/examples/**/*.py" = [
    "ERA001", # commented code ok in examples
]
"ai/**/*.py" = [
    "ASYNC230", # blocking I/O in async ok for example clients
]
"scripts/**/*.py" = [
    "SIM102",  # nested ifs more readable in utility scripts
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "backend.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.examples.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-n auto --dist=worksteal -v --strict-markers --tb=short"
timeout = 5
timeout_method = "thread"
markers = [
    "asyncio: mark test as an async test",
    "unit: mark test as a unit test",
    "integration: mark test as an integration test (5s timeout)",
    "e2e: mark test as an end-to-end pipeline test",
    "gpu: mark test as a GPU test (runs on self-hosted GPU runner with RTX A5500)",
    "slow: mark test as legitimately slow (30s timeout)",
    "benchmark: mark test as a benchmark test (requires pytest-benchmark)",
    "serial: mark test as requiring serial execution (no parallel)",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/examples/*",
    "backend/main.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    # Post-MVP features - need tests before enabling coverage
    "backend/api/routes/alerts.py",
    "backend/api/routes/audit.py",
    "backend/services/video_processor.py",
    "backend/services/degradation_manager.py",
    # TLS certificate generation - requires system-level testing
    "backend/core/tls.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 95  # Enforced at 95% per bead 2s4y
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage/backend"

[tool.hypothesis]
# Default settings (applied to all profiles)
# Profiles are loaded via HYPOTHESIS_PROFILE environment variable
# or settings.load_profile() in conftest.py

[tool.hypothesis.profiles.ci]
# CI profile: deterministic, fast
max_examples = 100
deadline = 1000
database = "none"
print_blob = true  # Print failing examples for reproduction

[tool.hypothesis.profiles.dev]
# Local profile: exploratory, thorough
max_examples = 500
deadline = 5000
database = "directory:.hypothesis"
