[project]
name = "home-security-intelligence"
version = "0.1.0"
description = "AI-powered home security monitoring system"
requires-python = ">=3.14"
dependencies = [
    # Core FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database (PostgreSQL)
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "greenlet>=3.1.0",
    "alembic>=1.13.0",
    # Redis
    "redis>=5.2.0",
    # File watching
    "watchdog>=6.0.0",
    # Image processing
    "pillow>=11.0.0",
    # GPU monitoring
    "nvidia-ml-py>=12.560.30",
    # Host system monitoring
    "psutil>=5.9.0",
    # HTTP client (for AI services)
    "httpx>=0.28.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Logging
    "python-json-logger>=2.0.7",
    # TLS/Cryptography
    "cryptography>=44.0.0",
    # Metrics
    "prometheus-client>=0.21.0",
    # Template engine (security patched)
    "jinja2>=3.1.5",
    "scikit-image>=0.26.0",
    "ultralytics>=8.3.245",
    "huggingface-hub>=0.36.0",
    "transformers>=4.57.3",
    "torchreid>=0.2.5",
    "gdown>=5.2.0",
    "piq>=0.8.0",  # BRISQUE image quality - lightweight, only needs torchvision
    "open_clip_torch>=2.29.0",
    "accelerate>=1.12.0",
    # Container orchestration
    "docker>=7.0.0",
    # Token counting for LLM context management
    "tiktoken>=0.8.0",
    # OpenTelemetry distributed tracing (NEM-1629)
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.44b0",
    "opentelemetry-instrumentation-redis>=0.44b0",
]

[project.optional-dependencies]
dev = [
    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "pytest-rerunfailures>=14.0",  # Flaky test detection - auto-retry failures
    "pytest-sugar>=1.0.0",  # Pretty progress bar and improved output
    "pytest-clarity>=1.0.0",  # Better assertion diffs
    "pytest-randomly>=4.0.0",  # Randomize test execution order
    "pytest-deadfixtures>=3.0.0",  # Detect unused fixtures
    "fakeredis>=2.20.0",
    "testcontainers>=4.0.0",
    "hypothesis>=6.100.0",  # Property-based testing
    "factory-boy>=3.3.0",  # Test fixture factories
    # CI/CD - Performance
    "pytest-benchmark>=4.0.0",
    "pytest-memray>=1.5.0",
    # CI/CD - Security
    "bandit>=1.7.0",
    # CI/CD - Complexity
    "wily>=1.25.0",
    # CI/CD - Big-O analysis
    "big-o>=0.11.0",
    # Video processing
    "ffmpeg-python>=0.2.0",
    # XML parsing (secure)
    "defusedxml>=0.7.0",
    # Dead code detection
    "vulture>=2.11",
    # Note: radon is provided by wily dependency (5.1.x)
    # Mutation testing
    "mutmut>=3.2.0",
    # Performance profiling (NEM-1644)
    "snakeviz>=2.2.0",  # Visualize cProfile output as flamegraphs
    # Note: py-spy requires system installation (not pip) - install with:
    # pip install py-spy  # or cargo install py-spy
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["backend"]
exclude = ["vulture_whitelist.py", "mutants/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913",# too many arguments
    "PLR0915",# too many statements (complex business logic)
    "PLR2004",# magic value comparison
    "S101",   # use of assert detected (ok in tests)
    "PLC0415",# import not at top level (necessary for circular imports/isolation)
    "ASYNC109",# timeout parameter in async function (standard in Redis blpop)
    "ASYNC110",# asyncio.sleep in while loop (valid for shutdown monitoring)
    "ASYNC230",# open in async function (acceptable for small file I/O)
    "SIM105",  # contextlib.suppress not suitable for async CancelledError patterns
    "RUF006",  # asyncio.create_task without storing (valid in signal handlers)
    "PTH110", # os.path.exists() - acceptable pattern
    "PTH123", # open() instead of Path.open() - acceptable pattern
    "TC001",  # TYPE_CHECKING imports break mocking in tests - keep imports at runtime
    "TC002",  # TYPE_CHECKING imports break mocking in tests - keep imports at runtime
    "TC003",  # TYPE_CHECKING imports break mocking in tests - keep imports at runtime
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = [
    "S101",   # assert is fine in tests
    "ARG001", # unused function argument in fixtures
    "ARG002", # unused method argument for fixtures used via side effects
    "PLR2004",# magic values ok in tests
    "B007",   # unused loop control variable ok in tests
    "ERA001", # section headers and documentation comments ok in tests
]
"backend/examples/**/*.py" = [
    "ERA001", # commented code ok in examples
]
"ai/**/*.py" = [
    "ASYNC230", # blocking I/O in async ok for example clients
]
"scripts/**/*.py" = [
    "SIM102",  # nested ifs more readable in utility scripts
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "backend.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.examples.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-n auto --dist=worksteal -v --strict-markers --tb=short"
timeout = 5
timeout_method = "thread"
markers = [
    "asyncio: mark test as an async test",
    "unit: mark test as a unit test",
    "integration: mark test as an integration test (5s timeout)",
    "e2e: mark test as an end-to-end pipeline test",
    "gpu: mark test as a GPU test (runs on self-hosted GPU runner with RTX A5500)",
    "slow: mark test as legitimately slow (30s timeout)",
    "benchmark: mark test as a benchmark test (requires pytest-benchmark)",
    "serial: mark test as requiring serial execution (no parallel)",
    "flaky: mark test as flaky (known to fail intermittently, quarantined)",
    "network: mark test as requiring network access (for isolation in CI)",
    "db: mark test as requiring database access",
    "redis: mark test as requiring Redis access",
]

[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/examples/*",
    "backend/main.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    # Post-MVP features - need tests before enabling coverage
    "backend/api/routes/alerts.py",
    "backend/api/routes/audit.py",
    "backend/services/video_processor.py",
    "backend/services/degradation_manager.py",
    # TLS certificate generation - requires system-level testing
    "backend/core/tls.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 95  # Enforced at 95% per bead 2s4y
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage/backend"

[tool.hypothesis]
# Default settings (applied to all profiles)
# Profiles are loaded via HYPOTHESIS_PROFILE environment variable
# or settings.load_profile() in conftest.py

[tool.hypothesis.profiles.ci]
# CI profile: deterministic, fast
max_examples = 100
deadline = 1000
database = "none"
print_blob = true  # Print failing examples for reproduction

[tool.hypothesis.profiles.dev]
# Local profile: exploratory, thorough
max_examples = 500
deadline = 5000
database = "directory:.hypothesis"

# =============================================================================
# Mutation Testing Configuration (mutmut 3.x)
# =============================================================================
# Mutation testing verifies test effectiveness by making small changes (mutants)
# to source code and checking if tests catch them. A high mutation score indicates
# tests effectively detect code changes.
#
# Target modules selected for mutation testing:
# - bbox_validation.py: Pure logic, well-tested, critical for AI pipeline
# - severity.py: Pure logic, well-tested, critical for risk assessment
# - prompt_parser.py: Pure logic, well-tested, critical for prompt management
# - search.py: Pure logic helpers for full-text search
# - dedupe.py: File deduplication logic
#
# Usage (mutmut 3.x):
#   uv run mutmut run backend/services/prompt_parser.py
#   uv run mutmut results
#   uv run mutmut show <mutant_id>
#
# See docs/MUTATION_TESTING.md for detailed guidance.
[tool.mutmut]
# Paths to mutate (start with well-tested, critical modules)
paths_to_mutate = [
    "backend/services/bbox_validation.py",
    "backend/services/severity.py",
    "backend/services/prompt_parser.py",
    "backend/services/search.py",
    "backend/services/dedupe.py",
]
# Tests directory (list format for mutmut 3.x)
tests_dir = ["backend/tests/unit/services/"]
# Extra pytest CLI args - override addopts completely to disable xdist
pytest_add_cli_args = ["-x", "-q", "--tb=short", "-p", "no:benchmark", "-o", "addopts="]
# Also copy backend modules to mutants directory for imports
also_copy = [
    "backend/",
]

[dependency-groups]
dev = [
    "pytest-clarity>=1.0.1",
    "pytest-deadfixtures>=3.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-sugar>=1.1.1",
]
