[project]
name = "home-security-intelligence"
version = "0.1.0"
description = "AI-powered home security monitoring system"
requires-python = ">=3.14"
dependencies = [
    # Core FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.22",  # CVE-2026-24486 fix
    # Database (PostgreSQL)
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "greenlet>=3.1.0",
    # Redis
    "redis>=5.2.0",
    # File watching
    "watchdog>=6.0.0",
    # Image processing
    "pillow>=11.0.0",
    # GPU monitoring (official NVIDIA bindings - pynvml is deprecated)
    "nvidia-ml-py>=12.560.30,<14.0.0",
    # Host system monitoring
    "psutil>=5.9.0",
    # Memory profiling (runtime debugging)
    "pympler>=1.1",
    # HTTP client (for AI services)
    "httpx>=0.28.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Logging
    "python-json-logger>=2.0.7",
    # TLS/Cryptography
    "cryptography>=44.0.0",
    # Metrics
    "prometheus-client>=0.21.0",
    # Template engine (security patched)
    "jinja2>=3.1.5",
    "scikit-image>=0.26.0",
    "ultralytics>=8.4.0",  # Required for YOLO26 support
    "huggingface-hub>=0.36.0",
    "transformers>=4.57.3",
    "torchreid>=0.2.5",
    "gdown>=5.2.0",
    "piq>=0.8.0",  # BRISQUE image quality - lightweight, only needs torchvision
    "open_clip_torch>=2.29.0",
    "accelerate>=1.12.0",
    # Container orchestration
    "docker>=7.0.0",
    # Token counting for LLM context management
    "tiktoken>=0.8.0",
    # OpenTelemetry distributed tracing (NEM-1629)
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.44b0",
    "opentelemetry-instrumentation-redis>=0.44b0",
    # NEM-3383: Container and host resource detection for correlation
    "opentelemetry-resourcedetector-docker>=0.4.0",
    # NEM-3792: OpenTelemetry Logs SDK for unified telemetry (logs-traces correlation)
    "opentelemetry-instrumentation-logging>=0.44b0",
    "urllib3==2.6.3",
    "openpyxl>=3.1.5",
    # Continuous profiling (NEM-3102)
    "pyroscope-io>=0.8.7",
    "orjson>=3.11.5",
    # MessagePack binary serialization for WebSocket (NEM-3737)
    "msgpack>=1.0.8",
    # Video analytics and tracking (NEM-3719)
    "supervision>=0.25.0",
]

[project.optional-dependencies]
# DEPRECATED: Use dependency-groups below for granular control
# Kept for backward compatibility: `uv sync --extra dev` still works
dev = [
    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-split>=0.9.0",  # CI sharding across runners
    "pytest-timeout>=2.3.0",
    "pytest-rerunfailures>=14.0",  # Flaky test detection - auto-retry failures
    "pytest-sugar>=1.0.0",  # Pretty progress bar and improved output
    "pytest-clarity>=1.0.0",  # Better assertion diffs
    "pytest-randomly>=4.0.0",  # Randomize test execution order
    "pytest-deadfixtures>=3.0.0",  # Detect unused fixtures
    "pytest-testmon>=2.1.0",  # Affected-only test execution
    "fakeredis>=2.20.0",
    "testcontainers>=4.0.0",
    "hypothesis>=6.100.0",  # Property-based testing
    "factory-boy>=3.3.0",  # Test fixture factories
    "freezegun>=1.5.0",  # Time mocking for tests
    "syrupy>=4.8.0",  # Snapshot testing for API response schemas (NEM-3748)
    # CI/CD - Performance
    "pytest-benchmark>=4.0.0",
    "pytest-memray>=1.5.0",
    # CI/CD - Security
    "bandit>=1.7.0",
    # CI/CD - Complexity
    "wily>=1.25.0",
    # CI/CD - Big-O analysis
    "big-o>=0.11.0",
    # Video processing
    "ffmpeg-python>=0.2.0",
    # XML parsing (secure)
    "defusedxml>=0.7.0",
    # Dead code detection
    "vulture>=2.11",
    # Note: radon is provided by wily dependency (5.1.x)
    # Mutation testing
    "mutmut>=3.2.0",
    # Performance profiling (NEM-1644)
    "snakeviz>=2.2.0",  # Visualize cProfile output as flamegraphs
    # Note: py-spy requires system installation (not pip) - install with:
    # pip install py-spy  # or cargo install py-spy
]
# NeMo Data Designer for synthetic test data generation
# Usage: `uv sync --extra nemo` or `uv sync --group nemo`
nemo = [
    "data-designer>=0.1.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
]
# GPU quantization support (NEM-3373, NEM-3376)
# Provides 4-bit and 8-bit quantization for LLMs via bitsandbytes
# Usage: `uv sync --extra quantization`
# Requires: CUDA-capable GPU
quantization = [
    "bitsandbytes>=0.44.0",
]
# Documentation validation tools
# Usage: `uv sync --extra docs` or `uv sync --group docs`
docs = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "rich>=13.0.0",
]

# =============================================================================
# PEP 735 Dependency Groups (uv 0.5.0+)
# =============================================================================
# Granular dependency management for different development workflows.
# Usage: uv sync --group <name> or uv sync --group lint --group test
#
# Groups:
#   lint      - Linting and formatting tools (ruff, mypy)
#   test      - Core testing framework and utilities
#   benchmark - Performance benchmarking tools
#   security  - Security scanning tools
#   mutation  - Mutation testing tools
#   nemo      - NeMo Data Designer for synthetic data generation
#   dev       - All development dependencies (includes all groups above)
# =============================================================================

[dependency-groups]
# Linting & Formatting
lint = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# Core Testing Framework
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "pytest-rerunfailures>=14.0",  # Flaky test detection - auto-retry failures
    "pytest-sugar>=1.0.0",  # Pretty progress bar and improved output
    "pytest-clarity>=1.0.0",  # Better assertion diffs
    "pytest-randomly>=4.0.0",  # Randomize test execution order
    "pytest-deadfixtures>=3.0.0",  # Detect unused fixtures
    "pytest-testmon>=2.1.0",  # Affected-only test execution
    "fakeredis>=2.20.0",
    "testcontainers>=4.0.0",
    "hypothesis>=6.100.0",  # Property-based testing
    "factory-boy>=3.3.0",  # Test fixture factories
    "freezegun>=1.5.0",  # Time mocking for tests
    "syrupy>=4.8.0",  # Snapshot testing for API response schemas (NEM-3748)
    # Video processing (needed for video service tests)
    "ffmpeg-python>=0.2.0",
    # XML parsing (secure - needed for test fixtures)
    "defusedxml>=0.7.0",
]

# Performance Benchmarking
benchmark = [
    "pytest-benchmark>=4.0.0",
    "pytest-memray>=1.5.0",
    "snakeviz>=2.2.0",  # Visualize cProfile output as flamegraphs
    # CI/CD - Big-O analysis
    "big-o>=0.11.0",
]

# Security Scanning
security = [
    "bandit>=1.7.0",
]

# Mutation Testing
mutation = [
    "mutmut>=3.2.0",
]

# Code Quality Analysis (complexity, dead code)
quality = [
    "wily>=1.25.0",  # Note: radon is provided by wily dependency (5.1.x)
    "vulture>=2.11",
]

# NeMo Data Designer (synthetic data generation for testing)
# Usage: uv sync --group nemo
# Requires NVIDIA_API_KEY environment variable
nemo = [
    "data-designer>=0.1.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
]

# Documentation validation tools
# Usage: uv sync --group docs
docs = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "rich>=13.0.0",
]

# All Development Dependencies (combines all groups above)
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "benchmark"},
    {include-group = "security"},
    {include-group = "mutation"},
    {include-group = "quality"},
    "types-pyyaml>=6.0.12.20250915",
    {include-group = "docs"},
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["backend"]
exclude = ["vulture_whitelist.py", "mutants/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print - disallow print() in production code
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0912",# too many branches (complex but intentional)
    "PLR0913",# too many arguments
    "PLR0915",# too many statements (complex business logic)
    "PLR2004",# magic value comparison
    "S101",   # use of assert detected (ok in tests)
    "SIM102", # nested if - explicit nesting more readable
    "SIM108", # ternary operator suggestion - if/else more readable in some contexts
    "UP046",  # generic class uses Generic subclass - Python 3.12+ syntax optional
    "UP047",  # generic function should use type parameters - Python 3.12+ syntax optional
    "PLC0415",# import not at top level (necessary for circular imports/isolation)
    "ASYNC109",# timeout parameter in async function (standard in Redis blpop)
    "ASYNC110",# asyncio.sleep in while loop (valid for shutdown monitoring)
    "ASYNC230",# open in async function (acceptable for small file I/O)
    "SIM105",  # contextlib.suppress not suitable for async CancelledError patterns
    "RUF006",  # asyncio.create_task without storing (valid in signal handlers)
    "PTH110", # os.path.exists() - acceptable pattern
    "PTH123", # open() instead of Path.open() - acceptable pattern
    "TC001",  # TYPE_CHECKING imports break mocking in tests - keep imports at runtime
    "TC002",  # TYPE_CHECKING imports break mocking in tests - keep imports at runtime
    "TC003",  # TYPE_CHECKING imports break mocking in tests - keep imports at runtime
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = [
    "S101",   # assert is fine in tests
    "S105",   # hardcoded passwords ok in tests
    "S106",   # hardcoded passwords ok in tests
    "ARG001", # unused function argument in fixtures
    "ARG002", # unused method argument for fixtures used via side effects
    "PLR2004",# magic values ok in tests
    "B007",   # unused loop control variable ok in tests
    "ERA001", # section headers and documentation comments ok in tests
    "SIM108", # ternary operator suggestion - if/else more readable in test mocks
    "SIM117", # nested with statements more readable with pytest.raises and patches
    "F841",   # unused variables ok in tests (e.g., documenting expected values)
    "PLW2901",# loop variable reassignment is common pattern in tests
    "PTH101", # os.chmod is necessary for permission tests
    "S110",   # try-except-pass ok in test cleanup blocks
    "B017",   # assert Exception is ok when testing generic error handling
    "T201",   # print() ok in tests for debugging output
]
"backend/examples/**/*.py" = [
    "ERA001", # commented code ok in examples
    "T201",   # print() ok in examples for demonstration output
]
"backend/main.py" = [
    "T201",   # print() ok for startup/shutdown banners
]
"ai/**/*.py" = [
    "ASYNC230", # blocking I/O in async ok for example clients
    "T201",   # print() ok in AI example clients
]
"ai/**/tests/*.py" = [
    "S101",   # assert is fine in tests
    "ARG001", # unused function argument in fixtures
    "ARG002", # unused method argument for fixtures used via side effects
    "ARG005", # unused lambda argument in mock __len__
    "PLR2004",# magic values ok in tests
    "B007",   # unused loop control variable ok in tests
    "ERA001", # section headers and documentation comments ok in tests
    "F841",   # unused variables ok in tests
]
"tools/**/*.py" = [
    "T201",   # print() ok in tool scripts for CLI output
    "E402",   # module level import not at top ok for sys.path manipulation
]
"backend/evaluation/harness.py" = [
    "T201",   # print() ok for CLI output in evaluation harness
    "S311",   # pseudo-random ok for mock data generation (not security-sensitive)
]
"scripts/**/*.py" = [
    "SIM102",  # nested ifs more readable in utility scripts
    "S603",    # subprocess call ok in CI/utility scripts (trusted input)
    "S607",    # partial executable paths ok in CI scripts (uv, npm, pytest)
    "ARG001",  # unused arguments reserved for future use
    "F841",    # unused variables reserved for future use (e.g., OpenAPI fields)
    "T201",    # print() ok in utility scripts for CLI output
    "PLR0911", # many returns ok for AST parsing utilities (extract_pydantic_constraints.py)
    "PLR0912", # many branches ok for AST parsing utilities (extract_pydantic_constraints.py)
]
"backend/scripts/**/*.py" = [
    "T201",   # print() ok in benchmark/utility scripts for CLI output
]
"setup.py" = [
    "T201",   # print() ok in setup script for CLI output
]
"setup_lib/**/*.py" = [
    "T201",   # print() ok in setup library for CLI output
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "backend.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.examples.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["backend/tests", "ai/*/tests", "ai/*/test_*.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-n auto --dist=worksteal -v --strict-markers --tb=short -p randomly"
timeout = 5
timeout_method = "thread"
# pytest-testmon is opt-in via --testmon flag for affected-only test execution
# Usage: pytest --testmon (only runs tests affected by code changes)
# Usage: pytest (runs all tests, default behavior)
markers = [
    "asyncio: mark test as an async test",
    "unit: mark test as a unit test",
    "integration: mark test as an integration test (5s timeout)",
    "e2e: mark test as an end-to-end pipeline test (60s timeout for model loading)",
    "gpu: mark test as a GPU test (runs on self-hosted GPU runner with RTX A5500, 60s timeout)",
    "slow: mark test as legitimately slow (30s timeout)",
    "benchmark: mark test as a benchmark test (requires pytest-benchmark)",
    "serial: mark test as requiring serial execution (no parallel)",
    "flaky: mark test as flaky (known to fail intermittently, quarantined)",
    "network: mark test as requiring network access (for isolation in CI)",
    "db: mark test as requiring database access",
    "redis: mark test as requiring Redis access",
    "requires_debug_mode: mark test as validating DEBUG=false enforcement (CI security check)",
    "prompt_evaluation: mark test as prompt evaluation (requires synthetic scenarios and Nemotron service or mock mode)",
    "enrichment: mark test as enrichment pipeline edge case test (tests model zoo orchestration, VRAM management, circuit breaker behavior)",
    "multimodal: mark test as multimodal evaluation test (compares local pipeline against NVIDIA vision ground truth)",
    "load: mark test as a load/performance test (verifies latency, memory, and throughput under load)",
]

[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/examples/*",
    "backend/main.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    # Post-MVP features - need tests before enabling coverage
    "backend/api/routes/alerts.py",
    "backend/api/routes/audit.py",
    "backend/services/video_processor.py",
    "backend/services/degradation_manager.py",
    # TLS certificate generation - requires system-level testing
    "backend/core/tls.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 90  # Lowered from 95% - unit tests alone can't reach 95% without integration test coverage
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage/backend"

[tool.hypothesis]
# Default settings (applied to all profiles)
# Profiles are loaded via HYPOTHESIS_PROFILE environment variable
# or settings.load_profile() in conftest.py

[tool.hypothesis.profiles.ci]
# CI profile: deterministic, fast
max_examples = 100
deadline = 1000
database = "none"
print_blob = true  # Print failing examples for reproduction

[tool.hypothesis.profiles.dev]
# Local profile: exploratory, thorough
max_examples = 500
deadline = 5000
database = "directory:.hypothesis"

# =============================================================================
# Vulture Configuration (dead code detection)
# =============================================================================
# Vulture finds unused code (dead code) in Python projects.
# Some test files use intentional "unreachable code" patterns for testing
# exception handling in async generators/context managers.
#
# Usage: uv run vulture backend/ vulture_whitelist.py --min-confidence 80
[tool.vulture]
min_confidence = 80
paths = ["backend/"]
# Exclude test files with intentional unreachable code patterns
exclude = [
    "backend/tests/unit/api/routes/test_events_coverage.py",
    "backend/tests/unit/services/test_orphan_scanner_service.py",
    "backend/tests/unit/core/test_redis_memory.py",  # Empty async generator pattern
    "backend/tests/integration/test_gpu_config_workflow.py",  # Unreachable code in mock function
]

# =============================================================================
# Mutation Testing Configuration (mutmut 3.x)
# =============================================================================
# Mutation testing verifies test effectiveness by making small changes (mutants)
# to source code and checking if tests catch them. A high mutation score indicates
# tests effectively detect code changes.
#
# Target modules selected for mutation testing:
# - bbox_validation.py: Pure logic, well-tested, critical for AI pipeline
# - severity.py: Pure logic, well-tested, critical for risk assessment
# - prompt_parser.py: Pure logic, well-tested, critical for prompt management
# - search.py: Pure logic helpers for full-text search
# - dedupe.py: File deduplication logic
#
# Usage (mutmut 3.x):
#   uv run mutmut run backend/services/prompt_parser.py
#   uv run mutmut results
#   uv run mutmut show <mutant_id>
#
# See docs/developer/patterns/mutation-testing.md for detailed guidance.
[tool.mutmut]
# Paths to mutate (start with well-tested, critical modules)
paths_to_mutate = [
    "backend/services/bbox_validation.py",
    "backend/services/severity.py",
    "backend/services/prompt_parser.py",
    "backend/services/search.py",
    "backend/services/dedupe.py",
]
# Tests directory (list format for mutmut 3.x)
tests_dir = ["backend/tests/unit/services/"]
# Extra pytest CLI args - override addopts completely to disable xdist
pytest_add_cli_args = ["-x", "-q", "--tb=short", "-p", "no:benchmark", "-o", "addopts="]
# Also copy backend modules to mutants directory for imports
also_copy = [
    "backend/",
]

# =============================================================================
# UV Package Manager Configuration
# =============================================================================
# Use CPU-only PyTorch wheels for the backend.
# The backend runs on CPU-only environments (python:slim-bookworm base image).
# GPU workloads (RT-DETR, Nemotron) run in separate AI containers under ai/.
#
# This eliminates ~700MB of unnecessary NVIDIA NCCL libraries that were causing
# CI Docker builds to fail with "no space left on device" errors.
[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
# Use best-match strategy to allow PyPI packages when not found on PyTorch CPU index
index-strategy = "unsafe-best-match"
